# pm-agent

./: .coverage  .gitignore  CLAUDE.md  PHASE3_REFACTORING.md  PRD.md  README.md  branches.yaml  capabilities.yaml  hooks.yaml  pyproject.toml
docs/: BRAINSTORM_FEATURE_COMPLETE.md  BRAINSTORM_WORKFLOW_DEMO.md  CONTEXT_ISOLATION_LITERATURE_REVIEW.md  IMPLEMENTATION_REPORT.md  PROJECT_COLLABORATION_GUIDE.md  brainstorm_implementation_summary.md  guide.md
docs/case_studies/: 2026-02-11-f-electron-scf-brainstorm.md
docs/plans/: 2026-02-09-execute-verify-design.md  2026-02-09-execute-verify-implementation.md  (+18 more)
src/: brainstorm.py  branches.py  code_analyzer.py  hooks.py  milestone.py  persistence.py  pipeline.py  prompts.py  registry.py  review.py  scheduler.py  specialist.py  state.py  velocity.py  worktree.py
tests/: test_audit.py  test_brainstorm.py  test_branches.py  test_code_analyzer.py  test_decompose.py  test_execute.py  test_hooks.py  test_intake.py  test_lifecycle.py  test_milestone.py  test_persistence.py  test_pipeline.py  test_project_registry.py  test_prompts.py  test_registry.py  test_review.py  test_scheduler.py  test_specialist.py  test_state.py  test_state_manager.py  test_state_optimization.py  test_velocity.py  test_verify.py  test_worktree.py
tools/: __init__.py  build_state.py  enhanced_review.py  generate_burndown.py  generate_dashboard.py  generate_graph.py  generate_task_specs.py  literature_search.py  literature_search_real.py  optimize_project.py  project_lifecycle.py  review_f_electron.py  run_research_review.py  serve.py  state_loader.py
(+238 files in other folders)
