[project]
name = "pm-agent"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pm-tools>=0.1.0",
    "pm-core>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=7.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
